fix /bank-accounts path name, update swagger docs
