# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/bank-account": {
+        "/bank-accounts": {
             "get": {
                 "description": "Retrieves all bank accounts for the authenticated user",
                 "consumes": [
@@ -78,7 +78,7 @@
                 }
             }
         },
-        "/bank-account/user/{userId}": {
+        "/bank-accounts/user/{userId}": {
             "get": {
                 "description": "Retrieves all bank accounts for a specific user by user ID",
                 "consumes": [
@@ -116,7 +116,7 @@
                 }
             }
         },
-        "/bank-account/{id}": {
+        "/bank-accounts/{id}": {
             "get": {
                 "description": "Retrieves a specific bank account by ID for the authenticated user",
                 "consumes": [
